# object_recognition_msgs

./: CMakeLists.txt  package.xml
msg/: Detection.msg  Hypothesis.msg  ObjectHypothesis.msg  ObjectLocation.msg  ObjectShape.msg  Recognition.msg
srv/: Classify.srv  DepthLookup.srv  DetectObjects.srv  DetectPlanes.srv  RecognizeObjects.srv  Segment.srv  segcla.srv  segment.srv
